# controllers/store_controller.py
@@ -3,13 +3,19 @@ from sqlalchemy.orm import Session
 from database import get_db
 from DAL_files import store_dal
 from schemas import store_schemas
+from geoalchemy2.functions import ST_SetSRID, ST_MakePoint
+import httpx
+
 router = APIRouter()
 
 @router.post("/stores/", response_model=store_schemas.Store)
 def create_store(
     name: str,
     address: str,
-    contact_number: str,
+    phone: str,
+    email: str,
+    latitude: float,
+    longitude: float,
     proprietor_name: str = None,
     dl_no: str = None,
     dl_license_photo: UploadFile = File(None),
@@ -22,13 +28,15 @@ def create_store(
         data = {
             "name": name,
             "address": address,
-            "contact_number": contact_number,
+            "phone": phone,
+            "email":email,
             "proprietor_name": proprietor_name,
             "dl_no": dl_no,
             "dl_license_photo": dl_license_photo,
             "gst_pan_number": gst_pan_number,
             "gst_certificate_img": gst_certificate_img,
             "govt_id": govt_id,
+            "location": ST_SetSRID(ST_MakePoint(longitude, latitude), 4326)  # Store location as POINT
         }
         new_store = store_dal.StoreDAL.create_store(db, **data)
         return new_store
@@ -42,12 +50,30 @@ def get_store(store_id: str, db: Session = Depends(get_db)):
         raise HTTPException(status_code=404, detail="Store not found")
     return db_store
 
+
+@router.get("/stores/nearest")
+def find_nearest_store(latitude: float, longitude: float, db: Session = Depends(get_db)):
+    nearest_store = store_dal.get_nearest_store(db, latitude, longitude)
+    if not nearest_store:
+        raise HTTPException(status_code=404, detail="No active stores found nearby.")
+
+    return {
+        "store_id": nearest_store.store_id,
+        "store_name": nearest_store.name,
+        "latitude": nearest_store.latitude,
+        "longitude": nearest_store.longitude,
+        "address": nearest_store.address,
+        "phone": nearest_store.phone
+    }
+
+
 @router.put("/stores/{store_id}", response_model=store_schemas.Store)
 def update_store(
     store_id: str,
     name: str = None,
     address: str = None,
-    contact_number: str = None,
+    email: str = None,
+    phone: str = None,
     proprietor_name: str = None,
     dl_no: str = None,
     dl_license_photo: UploadFile = File(None),
@@ -60,7 +86,8 @@ def update_store(
         data = {
             "name": name,
             "address": address,
-            "contact_number": contact_number,
+            "phone": phone,
+            "email": email,
             "proprietor_name": proprietor_name,
             "dl_no": dl_no,
             "dl_license_photo": dl_license_photo,
